--- a/src/Components/Cards/Cards.module.css
+++ b/src/Components/Cards/Cards.module.css
@@ -1,21 +1,85 @@
-.container2{
-    margin:50px 0;
-}
-.card{
-    padding: 20px;
-}
-
-.infected{
-    border-radius: 5px;
-    border-bottom: 10px solid blue;
-    
-}
-
-.recovered{
-    border-radius: 5px;
-    border-bottom: 10px solid green;
-}
-.deaths{
-    border-radius: 5px;
-    border-bottom: 10px solid red;
-}
+.container {
+    margin: 64px 0;
+    width: 100%;
+  }
+  
+  .grid {
+    display: grid;
+    grid-gap: 16px 8px;
+    width: 100%;
+    max-width: 1000px;
+    margin: 0 auto;
+  }
+  
+  @media (min-width: 400px) {
+    .grid {
+      grid-template-columns: repeat(1, 1fr);
+    }
+  }
+  
+  @media (min-width: 1000px) {
+    .grid {
+      grid-template-columns: repeat(3, 1fr);
+    }
+  }
+  
+  .card {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    border-radius: 8px;
+    padding: 16px;
+    color: #fff;
+    position: relative;
+    height: 154px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
+    opacity: 0.9;
+  }
+  
+  .card:hover {
+    transition: opacity 0.2s ease-in-out;
+    opacity: 1;
+  }
+  
+  .blueCard {
+    background: linear-gradient(90deg, #3f68f4, #6b89f7);
+  }
+  
+  .greenCard {
+    background: linear-gradient(90deg, green, rgb(13, 204, 13));
+  }
+  
+  .redCard {
+    background: linear-gradient(90deg, #d64161, rgb(255, 75, 75));
+  }
+  
+  .card h1 {
+    margin: 0;
+    font-family: 'Orbitron', Helvetica, sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+    color: rgba(255, 255, 255, 0.6);
+  }
+  
+  .card h2 {
+    margin: 0;
+    font-family: 'Orbitron', Helvetica, sans-serif;
+    font-weight: 500;
+    font-size: 32px;
+  }
+  
+  .card h3 {
+    margin: 0;
+    font-family: 'Orbitron', Helvetica, sans-serif;
+    font-weight: 500;
+    font-size: 14px;
+    color: rgba(255, 255, 255, 0.8);
+  }
+  
+  .card > span {
+    position: absolute;
+    top: 16px;
+    right: 16px;
+    color: rgba(255, 255, 255, 0.8);
+  }
+  
